@@ -2,6 +2,7 @@ Version 0.3.1
 -------------
 * Improved doctest syntax error message
 * PythonPathContext no longer breaks if small changes to the path occur in its context.
+* PythonPathContext can now insert into front or back of sys.path
 
 Version 0.3.0
 -------------
